[package]
name = "diaryx_share_extism"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diaryx_core = "1.4.0"
diaryx_plugin_sdk = { version = "0.3.1", features = ["full"] }
extism-pdk = "1.4"
yrs = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
getrandom = { version = "0.2", features = ["custom"] }

[patch.crates-io]
getrandom = { git = "https://github.com/diaryx-org/plugin-sdk.git", subdirectory = "patches/getrandom-0.2" }
diaryx_core = { git = "https://github.com/diaryx-org/diaryx.git", subdirectory = "crates/diaryx_core" }
diaryx_plugin_sdk = { git = "https://github.com/diaryx-org/plugin-sdk.git" }

[profile.release]
lto = "fat"
codegen-units = 1
